--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "delay": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
