package.json: Add prebuild lint && test, docker-compose.dev.db.yml: replace WEB_PORT with DB_PORT and move dbpath upper dir to make docker happy

--- a/server/docker-compose.dev.db.yml
+++ b/server/docker-compose.dev.db.yml
@@ -3,6 +3,6 @@ services:
   db:
     image: mongo:latest
     volumes:
-      - ./mongo-dev/db:/data/db
+      - ../mongo-dev/db:/data/db
     ports:
-      - "${WEB_PORT:-27017}:27017"
+      - "${DB_PORT:-27017}:27017"
