--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ag-grid-community": "^21.1.1",
     "ag-grid-vue": "^21.1.0",
+    "cypress-file-upload": "^3.3.3",
     "delay": "^4.3.0",
     "html-loader": "^0.5.5",
     "intl": "^1.2.5",
