--- a/server/Makefile
+++ b/server/Makefile
@@ -31,7 +31,11 @@ fake-stmp-down:
 
 mailhog-up:
 	${DC} -f ${DC_APP_BUILD_DEV} up mailhog
-	
+mailhog-stop:
+	${DC} -f ${DC_APP_BUILD_DEV} stop mailhog
+mailhog-rm:
+	${DC} -f ${DC_APP_BUILD_DEV} rm mailhog
+
 mongo-express-up: 
 	${DC} -f ${DC_APP_BUILD_DEV} up mongo-express
 mongo-express-down: 
