--- a/client/docker-compose.e2e.yml
+++ b/client/docker-compose.e2e.yml
@@ -19,11 +19,11 @@ services:
         https_proxy: ${http_proxy}
         no_proxy: ${no_proxy}
         npm_registry: ${NPM_REGISTRY}
-        sass_registry: ${SASS_REGISTRY}
-        NPM_AUDIT_DRY_RUN: ${NPM_AUDIT_DRY_RUN}
     ipc: host
     environment:
-      CYPRESS_BASE_URL: http://candilib_front_admin
+      CYPRESS_frontCandidat: http://candidat.candilib.local/candilib/
+      CYPRESS_frontAdmin: http://admin.candilib.local/candilib-repartiteur/
+      CYPRESS_build: 1
     volumes:
       - ./tests/e2e/:/app/tests/e2e/
 
