--- a/client/docker-compose.e2e.yml
+++ b/client/docker-compose.e2e.yml
@@ -8,6 +8,8 @@ services:
     ports:
         - 1025:1025
         - 8025:8025
+    logging:
+      driver: none
   e2e:
     image: candilib_e2e
     container_name: e2e
