:sparkles: Automate bordereaux sending

--- a/manon/.env-example
+++ b/manon/.env-example
@@ -1,2 +1,9 @@
 API_BASE_URL="http://localhost:8000/"
 API_PREFIX="/api/v2"
+
+API_LOGIN=tech@example.com
+API_PASS=changeme
+
+DB_NAME=candilib
+DB_USER='candilibAdmin'
+DB_PASS='Admin*78'
