--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,9 @@
     "dev-setup": "node dev-setup/index.js",
     "dev": "nodemon --inspect --watch src boot-dev.js",
     "format": "prettier-eslint --write 'src/**/*.js'",
-    "lint:all": "run-p lint:client lint --",
+    "lint:all": "run-p lint:client lint:manon lint --",
     "lint:client": "cd .. ; cd client ; npm run lint",
+    "lint:manon": "cd .. ; cd manon ; npm run lint",
     "lint:only": "eslint src",
     "prelint": "npm run format",
     "lint": "eslint src",
