--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: CI
 
 on: [push]
-
+env:
+  HEROKU_APP: candilib-api-dev
 jobs:
   build:
 
@@ -20,3 +21,7 @@ jobs:
           login $HEROKU_EMAIL
           password $HEROKU_TOKEN
         EOF
+        chmod 600 ~/.netrc
+        heroku git:remote --app $HEROKU_APP
+        heroku apps
+
