--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,6 @@ jobs:
           password $HEROKU_TOKEN
         EOF
         chmod 600 ~/.netrc
-        ls -alsrt ~/.netrc
         heroku git:remote --app $HEROKU_APP
-        heroku apps
+        git push heroku HEAD:master -f
 
