--- a/client/docker-compose.prod.front.yml
+++ b/client/docker-compose.prod.front.yml
@@ -16,7 +16,8 @@ services:
         CYPRESS_DOWNLOAD_MIRROR: ${CYPRESS_DOWNLOAD_MIRROR}
         NPM_AUDIT_DRY_RUN: ${NPM_AUDIT_DRY_RUN}
         CLIENT_BUILD_TARGET: candidat
-        PUBLIC_PATH: /candilib
+        PUBLIC_PATH: ${CANDIDAT_PUBLIC_PATH:-/candilib}
+        VUE_APP_URL_PUBLIC_PATH: ${CANDIDAT_PUBLIC_PATH:-/candilib}
         APP_VERSION: ${APP_VERSION}
 #    env_file:
 #      - ${cnf:-.env}
@@ -43,7 +44,8 @@ services:
         CYPRESS_DOWNLOAD_MIRROR: ${CYPRESS_DOWNLOAD_MIRROR}
         NPM_AUDIT_DRY_RUN: ${NPM_AUDIT_DRY_RUN}
         CLIENT_BUILD_TARGET: admin
-        PUBLIC_PATH: /candilib-repartiteur
+        PUBLIC_PATH: ${ADMIN_PUBLIC_PATH:-/candilib-repartiteur}
+        VUE_APP_URL_PUBLIC_PATH: ${ADMIN_PUBLIC_PATH:-/candilib-repartiteur}
         APP_VERSION: ${APP_VERSION}
 #    env_file:
 #      - ${cnf:-.env}
