--- a/client/docker-compose.prod.front.yml
+++ b/client/docker-compose.prod.front.yml
@@ -18,12 +18,13 @@ services:
         CLIENT_BUILD_TARGET: candidat
         PUBLIC_PATH: /candilib
         APP_VERSION: ${APP_VERSION}
+        LINE_DELAY: ${LINE_DELAY}
 #    env_file:
 #      - ${cnf:-.env}
     environment:
       API_HOST: ${API_HOST:-api}
       API_PORT: ${API_PORT:-8000}
-      LINE_DELAY: ${LINE_DELAY:-0}
+      LINE_DELAY: ${LINE_DELAY}
     ports:
       - "${FRONT_CANDIDAT_PORT:-80}:80"
     restart: always
