--- a/client/docker-compose.prod.front.yml
+++ b/client/docker-compose.prod.front.yml
@@ -25,6 +25,11 @@ services:
       API_HOST: ${API_HOST:-api}
       API_PORT: ${API_PORT:-8000}
       LINE_DELAY: ${LINE_DELAY}
+      API_USER_SCOPE: ${API_USER_SCOPE}
+      API_USER_LIMIT_RATE: ${API_USER_LIMIT_RATE}
+      API_USER_BURST: ${API_USER_BURST}
+      APP_USER_LIMIT_RATE: ${APP_USER_LIMIT_RATE}
+      APP_USER_BURST: ${API_USER_BURST}
     ports:
       - "${FRONT_CANDIDAT_PORT:-80}:80"
     restart: always
@@ -52,6 +57,11 @@ services:
     environment:
       API_HOST: ${API_HOST:-candilib_api}
       API_PORT: ${API_PORT:-8000}
+      API_USER_SCOPE: ${API_USER_SCOPE}
+      API_USER_LIMIT_RATE: ${API_USER_LIMIT_RATE}
+      API_USER_BURST: ${API_USER_BURST}
+      APP_USER_LIMIT_RATE: ${APP_USER_LIMIT_RATE}
+      APP_USER_BURST: ${API_USER_BURST}
     ports:
       - "${FRONT_ADMIN_PORT:-80}:80"
     restart: always
