Debug flaky travis test

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -42,9 +42,9 @@ COPY babel.config.js cypress.json jsconfig.json package-lock.json package.json v
 
 ARG LINE_DELAY
 RUN if [ -n "$LINE_DELAY" ] && [ -f "public/config-candilib.json" ] ; then \
-      echo '{"lineDelay": '"$LINE_DELAY"'}' > public/config-candilib.json ; \
+      echo '{"lineDelay": '$LINE_DELAY'}' > public/config-candilib.json ; \
     fi
-RUN set -ex; npm --no-git-tag-version version ${APP_VERSION} ; npm install --loglevel http
+RUN set -ex; npm --no-git-tag-version version ${APP_VERSION} ; npm install --loglevel warn
 EXPOSE 8080
 
 CMD ["npm","run", "serve"]
