--- a/server/docker-compose.prod.db.yml
+++ b/server/docker-compose.prod.db.yml
@@ -2,7 +2,7 @@
 version: '3.5'
 services:
   db:
-    image: mongo:4.0.6
+    image: ${DOCKER_DB_IMAGE_NAME:-mongo}:${DOCKER_DB_APP_VERSION:-4.0.6}
     container_name: candilib_mongo
     volumes:
       - ${DBDATA:-../mongo}:/data/db
