--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -18,6 +18,34 @@ services:
       DB_USER: ${DB_USER:-adminCandilib}
       DB_PASS: ${DB_PASS:-changeme78}
 
+  db-rest:
+    image: candilib-db-rest:${APP_VERSION:-latest}
+    container_name: candilib_db_rest
+    build:
+      target: development
+      context: ./db/app
+      dockerfile: Dockerfile
+      args:
+        http_proxy: ${http_proxy}
+        https_proxy: ${http_proxy}
+        no_proxy: ${no_proxy}
+        npm_registry: ${NPM_REGISTRY}
+    ports:
+      - "8090:8090"
+    networks:
+      - candilib-network
+    volumes:
+      - ./db/app/app.js:/app/app.js
+      - ./db/app/index.js:/app/index.js
+      - ./db/app/package.json:/app/package.json
+      - ./db/app/package-lock.json:/app/package-lock.json
+    environment:
+      MONGO_URL: ${MONGO_URL:-mongodb://adminCandilib:changeme78@db:27017/candilib}
+      DB_NAME: ${DB_NAME:-candilib}
+      DB_USER: ${DB_USER:-adminCandilib}
+      DB_PASS: ${DB_PASS:-changeme78}
+
+    
   api:
     image: candilib_api:${APP_VERSION:-latest}
     build:
