--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,14 @@
   "version": "2.0.0-alpha.0",
   "description": "Réserver sa place d'examen pratique du permis de conduire",
   "main": "index.js",
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+  },
   "scripts": {
+    "scalingo-prebuild": "bash scalingo-prebuild.sh",
+    "scalingo-postbuild": "bash scalingo-build-server.sh",
+    "build-ci": "babel src -d dist",
     "prebuild": "npm run test",
     "build": "babel src -d dist",
     "db": "docker-compose -f docker-compose.dev.db.yml up -d",
